packaging, ui improvements on style text boxes as well as more completion, started packaging like classes cause the directory is getting confusing. renamed some classes. got a little closer with p2p. improved serverstatuslabel visually - more later. chatterpaint can edit images and has a speed improvement (old, dont remember if i committed that).